# python-testing-examples

./: README.md  pyproject.toml
src/: context_manager_deps.py  external_call_func.py  nested_deps.py  sut.py
tests/: test_deps.py
tests/mocks/: mock_connection_manager.py
