[tool.poetry]
name = "python-testing-examples"
version = "0.1.0"
description = ""
authors = ["Paritosh <paritoshmmmec@gmail.com>"]
readme = "README.md"
packages = [{include = "python_testing_examples"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
